# feddit-sentiment-microsite

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  feddit_client.py  logging_config.py  main.py  sentiment.py
tests/: test_feddit_client.py  test_main.py  test_sentiment.py
