[project]
name = "feddit-sentiment-microsite"
version = "0.1.0"
description = "Sentiment analysis microservice for Feddit comments"
authors = [
    {name = "Mateu Busquets",email = "mateu003@gmail.com"}
]
packages = [{ include = "app" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.12"
pre-commit = "^4.2.0"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
